# ChangeLog for dev-util/debhelper
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.96 2013/12/14 14:44:39 jer Exp $

*debhelper-9.20131213 (14 Dec 2013)

  14 Dec 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20131213.ebuild:
  Version bump.

*debhelper-9.20131127 (28 Nov 2013)

  28 Nov 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20131127.ebuild:
  Version bump.

*debhelper-9.20131110 (10 Nov 2013)

  10 Nov 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20131110.ebuild:
  Version bump.

*debhelper-9.20131105 (06 Nov 2013)

  06 Nov 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20131105.ebuild:
  Version bump.

  29 Sep 2013; Jeroen Roovers <jer@gentoo.org> -debhelper-9.20120909.ebuild,
  -files/debhelper-7.4.13-conditional-nls.patch:
  Old.

*debhelper-9.20130921 (22 Sep 2013)

  22 Sep 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130921.ebuild:
  Version bump.

*debhelper-9.20130720 (21 Aug 2013)

  21 Aug 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20130720.ebuild:
  Version bump.

  13 Aug 2013; Jeroen Roovers <jer@gentoo.org> -debhelper-9.20130504.ebuild,
  -debhelper-9.20130507.ebuild, -debhelper-9.20130509.ebuild,
  -debhelper-9.20130516.ebuild, -debhelper-9.20130518.ebuild,
  -debhelper-9.20130604.ebuild, -debhelper-9.20130605.ebuild,
  -debhelper-9.20130624.ebuild, -debhelper-9.20130626.ebuild:
  Old.

  07 Aug 2013; Agostino Sarubbo <ago@gentoo.org> debhelper-9.20130630.ebuild:
  Stable for x86, wrt bug #477508

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> debhelper-9.20130630.ebuild:
  Stable for s390, wrt bug #477508

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> debhelper-9.20130630.ebuild:
  Stable for ia64, wrt bug #477508

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> debhelper-9.20130630.ebuild:
  Stable for sparc, wrt bug #477508

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> debhelper-9.20130630.ebuild: