@@ -8,6 +8,7 @@ DIST debhelper_9.20131105.tar.gz 472348 SHA256 ddd0571a96db08dee1f8e624f8919d348
 DIST debhelper_9.20131110.tar.gz 472583 SHA256 f331baa25763ac768a6994bf55e8c018225e89431913ffc91adc78845b960d3e SHA512 00ef78ac0c7c96469346bb182b83d39495dfeda66c30c4cf3c5814ffcf3a3bd65e34a183389c33aea6c72bf3d65a807478fb03727fd00f8f8077280c017f2d53 WHIRLPOOL 57b20895b73fd3a3e353dc721e7d57efabaec6e923726d97783af3b335a9c778855e9791e420c991b4fb7c76ff0c7942ec39fe7855512e1e1bd20c5cd20ca399
 DIST debhelper_9.20131127.tar.gz 472736 SHA256 21e7b953f14a6c6e5b8d6959af16638e030894555eda6e26fbd6549e3cf9118c SHA512 fc5f1e5e27a43ef64f39e97a6ff20c5513c35ab43a0cae6895ff786af7861ac4affd9a6668b3328f2242ca3817d925d0d291b226c79e3e00280b4ecb3817a029 WHIRLPOOL 069a05ab6239e963c6415da67f7265a0c2ba91d4de52a0c5bf4dc10da1206e7b388229a9ae99f46a8acf22288b5ea0db30ce458bfdb3e985899a74594400f89b
 DIST debhelper_9.20131213.tar.gz 472845 SHA256 5a6db89e1487f05d43f149b8617f068956649cd66fbbdaf26e845b3a311c3685 SHA512 5116f42e8a382fdcf833abcd49daadf017831b3dd898ebb5942a86cf1c8747812a7c129282125c2c559546a3cd36ea95848c4028d8a0fc623764f766c829b1fc WHIRLPOOL 7b51f162351f86adb7af984d06ec3b431cb9b3d68f78abaaea6ddb94485722878e467a20d8c2faf425a0ecadea1b37a953a6d92866d39020707111c6cdc1f9d3
+DIST debhelper_9.20131227.tar.gz 473409 SHA256 c71f33ae883e0f79eaa28fdb20890cad95cbea918c6198f693e15d614a652e6e SHA512 14ce758aa46d66b26e1f1cb4c59d12d3794a083055f5c9c775a0998b34fb881400f847efb680a51e8638f8086f53c56e5ecba56b2867f0a23970f8d9428a484a WHIRLPOOL 15c6804b73425d9e4efff49527a8871fbb50ec5ebf5157a9862663723b32f37ffeb152d5e0dd9a6f0288d9ceb10de84c1068ab76d8ce32dfcaa730c5bea85d7e
 EBUILD debhelper-9.20130630.ebuild 1669 SHA256 9f58bf51842886ed0bd0b275bdc979e5df605ff6b17f5c9fbefd2bd5ad6278f3 SHA512 8b88583de2d4a34e9c361f7416b0041042e85f11ca37ee63173b02a82d110752ffb1e87ba4d42e841c47981ebd145c9c066be0d9078861e1aae4dd2afa1f3240 WHIRLPOOL 72062a66fa13cb8262c66a21449d13bb3e8cad1b10472d207f9f0ff02a8e1dec1da8d1604ff5477ec5834829a56f553a3785dbbb1025bc1a7e62ceda782cc2f8
 EBUILD debhelper-9.20130720.ebuild 1678 SHA256 8a60bd7eac800ec25510293202ac517b3e9883243deabd96296b3530937bcfae SHA512 43a30deea7aa62899746ad01557ee8fae4aa3b86a5f921b0aab859e873bd4045e396f5dac5b961f247b8e84f705630f7f1a50ad1e2fe43a4c3ed24838a020848 WHIRLPOOL d0c02161a1137883e11af6fcaedfa54c428cbe83d93ccdb57261b926223b179314285bb86145825f12986a5530140cf6f9b738972d68df6cf6ebc0b613dec841
 EBUILD debhelper-9.20130921.ebuild 1678 SHA256 2b509a5cd933e3ad7fa1d22a84bf62a8dc87e8d7268673b8c5e55e8fa158ebd3 SHA512 f807bdb6b573d7457ecbafce92ab81fd3bb983618ceed437230ca532700a3d6496efd5b914ab2399c7f6ef55c7b5ee6c10847dc4e9119a1eee59e6cf7a419910 WHIRLPOOL fcedffa9dc2bb54c239c160cb6c219a510b530bb1a9aaef896a73080da3d9738e7b3d50c35ea22b31a0aa355739aa9711619e189688c2e4dc3d54680f1d37209
@@ -15,12 +16,13 @@ EBUILD debhelper-9.20131105.ebuild 1678 SHA256 e4b0c7df898cf5660fdf01246f71e8a29
 EBUILD debhelper-9.20131110.ebuild 1678 SHA256 b0c00b381758852d3e49a630fbbca4eb5b6d6689ea33ca9312bac298f77dbcd9 SHA512 38581ed6d2b72d56b4a3c00ac9d6bb7bb6ef6489194273f4ded3848d11712371ed006f2ae0d57c77634ddbd9bce9ac1f3a0b9d01565930baa02b21f444edb141 WHIRLPOOL 9cea0965a6db589ea2023c2d2bd17ee58c7645a0100dd118aed45f74e09cda186c39a92de4e4cecf3da69d45be1b737dbc89747e627e9ddef33598fa8b201816
 EBUILD debhelper-9.20131127.ebuild 1678 SHA256 c220400965884f298736bc8a6bae1946233de87680cc91c87cf8e83edba4bd5c SHA512 ef0069680245b39a42b4a83e36ff87940930520a649908f10e2d2829bdc8b12ee2f519a27f4afac1db501f9a6bcd0638521fa8ebf917ca26a41e01397242a8bf WHIRLPOOL 52377cf1f063477a34c9bc484fdadbb4b7595e45188e9781fc8602a76050ec48691eb6429f4552953525d04bf7867ad3c7e4ab072e41b6736ad03e6431e2a183
 EBUILD debhelper-9.20131213.ebuild 1678 SHA256 e690ef52bbed4a9709ff5a38066d71d4a59739c922d1e3ceca5c880cfbc28772 SHA512 ac116376be359f26fed6412a7f0cdbc30d364334d56106d5e547979389ed050e66099e72fb15931a4382e5cbff667c788b7c3935365f34e6461272f56affebcc WHIRLPOOL f3d12003e6acf12db8aec56baf98337a7ef91d7cc657fe9016dfc026c62ff615c1e973bf8b502bdb53493965074ceb5b4336b5cccd32c24f8ec70f52394e07c3
-MISC ChangeLog 14013 SHA256 a3411ee8b63f514d2724d0af2ebf8f6736941f6acb821680cb6c4b9930a2ae04 SHA512 1fa5e5c04d7ffac76e8bce46f4ee6c4e7b5513731aa0109d2da78611937ca5505eb170284030a29a2f7ee31b4a6f281276831831ac025f68e2877cf36647fe35 WHIRLPOOL 77f292f9a988ec21a3be66c22b26fe29a780de955f1262e39187ba69f28edf214362a17e4a9feb01a7b9d6b50452989d0136d67f4f820eaf315b31b5e80b3f09
+EBUILD debhelper-9.20131227.ebuild 1685 SHA256 6fb795c8bab70dc58b6c797b1cb38f5aa9c709a988119e6e2df4a5c00caadf15 SHA512 e748bcaad4cf2fd7d2c4869ef78fa95b4e9dfd034e09b416c0c0d5d36a95c9a9f9c3bbc9d4b67b7ad4119de22e5873693290d2f3a49d7ced52368b4e5791afbe WHIRLPOOL 43c59cc03d8d6b9c1be38d04560d93d5c5c5225b6cd320b787aa278a9b6f54d80745a0fe754ce468be54989ea8b3551f45250218a2adce1ce015825181e7cace
+MISC ChangeLog 14144 SHA256 217783241b66721b8e51cbb2a3002f0b697bbf04b0f119e3e3b38a025c68d7e2 SHA512 34874377f3fddb84ccf2340f504d3a536982c8e3b981c8b2733c25c6b4290cc9ada9c3f70ac64c6f59d0f35091bec8ba9f454ba3f74c899651ef08fc8c5527f8 WHIRLPOOL 6ec8d5745eec5678cb7f9f449e9c08216fd97b5d384c85eed28354dcb12a5654663bc0ff6cc8cf53c17cb81ebb9d493822087dc9b49360cfc30f1dea1951350d
 MISC metadata.xml 162 SHA256 316a32c1e8ee9f6548707abec9a803d0a19feea1be10a19273cc04e0cd357644 SHA512 89446121b0be8d0f8bb5160fd33ecddf47ae2994022c0e6fe5caba7bbb9b0bb35337011373c20734bb683d8e172ff88a19aab3ea7354f7786832a5e5fcaf39a8 WHIRLPOOL b214dc4f7f8de7edc5034a877c2ca2c18fbe6b5a1db3a758f0e21328b25d7139961a6b18feed6ac5c09e09d8f61ebd38eed03362212d81aa6f468e8c41c7ca55
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKsbtgACgkQVWmRsqeSphNtQgCcDhPjFH62s9CSO7kiSkHC9XyB
-gYgAn3cmEfHO2amSEw6xjA3VszFgCnTC
-=tY88
+iEYEAREIAAYFAlK+0V0ACgkQVWmRsqeSphOzxQCfdKg+yXRESfgqjE21+GWRHbZb
+1v0AniytZcrk3IV9L3Cgk2UyzB6JMHH8
+=GPRQ
 -----END PGP SIGNATURE-----
