@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/debhelper
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.96 2013/12/14 14:44:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.97 2013/12/28 13:25:47 jer Exp $
+
+*debhelper-9.20131227 (28 Dec 2013)
+
+  28 Dec 2013; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20131227.ebuild:
+  Version bump.
 
 *debhelper-9.20131213 (14 Dec 2013)
 
